--- a/iDoctor_vue/package.json
+++ b/iDoctor_vue/package.json
@@ -10,6 +10,7 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "vue": "^2.5.2",
     "vue-materials": "^1.0.7-rc.7",
     "vue-router": "^3.0.1"
