--- a/iDoctor_api/package.json
+++ b/iDoctor_api/package.json
@@ -16,6 +16,8 @@
     "express": "^4.16.3",
     "jsonwebtoken": "^8.2.2",
     "mongoose": "^5.1.2",
-    "request": "^2.87.0"
+    "request": "^2.87.0",
+    "socket.io": "^2.1.1",
+    "web-push": "^3.3.1"
   }
 }
